--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -3,6 +3,9 @@ on: push
 jobs:
   my-job:
     runs-on: ubuntu-latest
+    environment:
+      secret = os.getenv('NAME')
     steps:
       - name: my-step
-        run: echo "Hello World!"
+        
+        run: echo ${{secret}}
